# moneymanagerex

./: .appimage-builder.yml  .appveyor.yml  .clang-format  .codacy.yml  .codedocs  .editorconfig  .eslintrc.yml  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .mailmap  .remarkrc.yml  .snapcraft.yaml  .travis.yml  .travis.yml.in  BUILD.md  Brewfile  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  Dockerfile.Fedora.clang  Dockerfile.Fedora.gcc  Dockerfile.Ubuntu.clang  Dockerfile.Ubuntu.gcc  Dockerfile.openSUSE.clang  Dockerfile.openSUSE.gcc  INSTALL.Fedora.md  INSTALL.MacOS.md  INSTALL.TXT  INSTALL.Ubuntu.md  INSTALL.Windows.md  INSTALL.macOS.md  INSTALL.md  INSTALL.openSUSE.md  Makefile  Makefile.in  NEWS  README.RU  (+30 more)
3rd/: CMakeLists.txt
3rd/cgitemplate/: AUTHORS  Doxyfile  HISTORY  README  html_template.cpp  html_template.h  makefile  test.cpp  test.h
3rd/luawrapper/: README  luawrapper.hpp  luawrapperutil.hpp
3rd/mongoose/: mongoose.c
3rd/tinyxml2/: CMakeLists.txt  dox  setversion.py  xmltest.cpp
lib/: CMakeLists.txt  readme.txt
lib/UnitTest++/: TestReporterStdout.cpp  readme.txt
lib/cajun/: Makefile  Readme.txt  ReleaseNotes.txt  patch.diff  test.cpp  test8.vcproj  test9.vcproj
lib/lua/: CMakeLists.txt  Makefile
lib/lua-cjson/: manual.txt
lib/sqlite/: CMakeLists.txt  codec.c  codec.h  codecext.c  extensionfunctions.c  rijndael.c  rijndael.h  sha2.c  sha2.h  sqlite3.def  sqlite3secure.c
lib/wxsqlite/: CMakeLists.txt  Readme.txt  wxsqlite3.cpp
po/: CMakeLists.txt  GNUmakefile  Makefile.in  MoneyManagerEx.pot  README.md  ab.po  albanian.po  ar.po  ar_SA.po  arabic.po  be_BY.po  bg.po  bg_BG.po  bulgarian.po  burmese.po  ca.po  ca_ES.po  catalan.po  chinese_chs.po  chinese_zh.po  common.po  croatian.po  cs.po  cs_CZ.mo  cs_CZ.po  czech.po  da.po  da_DK.po  de.po  de_DE.po  dutch.po  dutch_be.po  el.po  el_GR.po  en_GB.po  en_IN.po  en_US.po  english-uk.po  english.po  es.po  (+111 more)
po/crownid/: ar_SA.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  fi_FI.po  fr_FR.po  he_IL.po  hi_IN.po  hr_HR.po  hu_HU.po  id_ID.po  it_IT.po  ja_JP.po  ko_KR.po  lt_LT.po  lv_LV.po  ml_IN.po  my_MM.po  nl_BE.po  nl_NL.po  no_NO.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sk_SK.po  sl_SI.po  sq_AL.po  sr_SP.po  sv_SE.po  ta_IN.po  th_TH.po  tr_TR.po  uk_UA.po  vi_VN.po  (+2 more)
po_wxstd/: CMakeLists.txt  _readme.txt
src/: CMakeLists.txt  _readme.txt  aboutdialog.cpp  aboutdialog.h  accountdialog.cpp  accountdialog.h  appstartdialog.cpp  appstartdialog.h  assetdialog.cpp  assetdialog.h  assetspanel.cpp  assetspanel.h  attachmentdialog.cpp  attachmentdialog.h  billsdepositsdialog.cpp  billsdepositsdialog.h  billsdepositspanel.cpp  billsdepositspanel.h  budgetentrydialog.cpp  budgetentrydialog.h  budgetingpanel.cpp  budgetingpanel.h  budgetyeardialog.cpp  budgetyeardialog.h  budgetyearentrydialog.cpp  budgetyearentrydialog.h  build.h  categdialog.cpp  categdialog.h  choices.cpp  choices.h  columnorder.cpp  columnorder.h  constants.cpp  constants.h  constants.h.in  currencydialog.cpp  currencydialog.h  customfielddialog.cpp  customfielddialog.h  (+223 more)
src/app/: mmFrame.cpp
src/base/: constants.cpp  constants.h  defs.h  images_list.cpp  images_list.h  paths.cpp  platfdep_mac.mm  platfdep_unix.cpp  types.h
src/charts/: wxareachart.cpp  wxareachart.h  wxareachartctrl.cpp  wxareachartctrl.h  wxareachartdatasetoptions.cpp  wxareachartdatasetoptions.h  wxareachartoptions.cpp  wxareachartoptions.h  wxbarchart.cpp  wxbarchart.h  wxbarchartctrl.cpp  wxbarchartctrl.h  wxbarchartdatasetoptions.cpp  wxbarchartdatasetoptions.h  wxbarchartoptions.cpp  wxbarchartoptions.h  wxboxplot.cpp  wxboxplot.h  wxboxplotctrl.cpp  wxboxplotctrl.h  wxboxplotdatasetoptions.cpp  wxboxplotdatasetoptions.h  wxboxplotoptions.cpp  wxboxplotoptions.h  wxbubblechart.cpp  wxbubblechart.h  wxbubblechartctrl.cpp  wxbubblechartctrl.h  wxbubblechartoptions.cpp  wxbubblechartoptions.h  wxcandlestickchart.cpp  wxcandlestickchart.h  wxcandlestickchartctrl.cpp  wxcandlestickchartctrl.h  wxcandlestickchartoptions.cpp  wxcandlestickchartoptions.h  wxchart.cpp  wxchart.h  wxchartbackground.cpp  wxchartbackground.h  (+206 more)
src/data/: AccountData.cpp  AccountData.h  AssetData.cpp  AssetData.h  AttachmentData.cpp  AttachmentData.h  BudgetData.cpp  BudgetData.h  BudgetPeriodData.cpp  BudgetPeriodData.h  CategoryData.cpp  CategoryData.h  CurrencyData.cpp  CurrencyData.h  CurrencyHistoryData.cpp  CurrencyHistoryData.h  FieldData.cpp  FieldData.h  FieldValueData.cpp  FieldValueData.h  InfoData.cpp  InfoData.h  PayeeData.cpp  PayeeData.h  ReportData.cpp  ReportData.h  SchedData.cpp  SchedData.h  SchedSplitData.cpp  SchedSplitData.h  SettingData.cpp  SettingData.h  StockData.cpp  StockData.h  StockHistoryData.cpp  StockHistoryData.h  TagData.cpp  TagData.h  TagLinkData.cpp  TagLinkData.h  (+14 more)
src/db/: DB_Table.h  DB_Table_Accountlist.h  DB_Table_Accountlist_V1.h  DB_Table_Assetclass.h  DB_Table_Assetclass_Stock.h  DB_Table_Assetclass_Stock_V1.h  DB_Table_Assetclass_V1.h  DB_Table_Assets.h  DB_Table_Assets_V1.h  DB_Table_Attachment.h  DB_Table_Attachment_V1.h  DB_Table_Billsdeposits.h  DB_Table_Billsdeposits_V1.h  DB_Table_Budgetsplittransactions.h  DB_Table_Budgettable.h  (+108 more)
tests/: CMakeLists.txt  Makefile  Makefile.in  cpu_timer.cpp  cpu_timer.h  db_init_model.cpp  db_init_model.h  defined_test_selection.h  framebase_tests.cpp  framebase_tests.h  mmex_tests.cpp  mmex_tests.rc  test_about_dialog.cpp  test_about_dialog.h  test_assets.cpp  test_assets.h  test_billsdeposits.cpp  test_billsdeposits.h  test_callback_hooks.cpp  test_callback_hooks.h  test_checking.cpp  test_checking.h  test_currency.cpp  test_currency.h  test_database_initialisation.cpp  test_database_initialisation.h  test_date_range.cpp  test_date_range.h  test_filtertrans_dialog.cpp  test_filtertrans_dialog.h  test_options_dialog.cpp  test_options_dialog.h  test_relocate_category.cpp  test_relocate_category.h  test_relocate_payee.cpp  test_relocate_payee.h  test_stocks.cpp  test_stocks.h  test_translink.cpp  test_translink.h
(+1431 files in other folders)
